welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: illegal start of simple expression
    if ((l<nums(i)) )){
                     ^